增加了.gitignore | 完善了README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.pythonPath": "D:\\Python376\\python.exe",
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "dense": "cpp"
     }
 }
